fix overflow

--- a/app/javascript/styles/classification/basics.scss
+++ b/app/javascript/styles/classification/basics.scss
@@ -146,7 +146,8 @@ color: #EEAA7B;
 
   font-family: inherit;
   max-height: 200px;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   h1{
     font-size: 195%;
