--- a/app/javascript/styles/mastodon/basics.scss
+++ b/app/javascript/styles/mastodon/basics.scss
@@ -130,7 +130,8 @@ button {
 
   font-family: inherit;
   max-height: 200px;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
 
   h1{
     font-size: 195%;
